Use Set.of and List.of + fix duplicate values in set